[gd_scene load_steps=14 format=3 uid="uid://owug2m35obl1"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_mh3fo"]
[ext_resource type="PackedScene" uid="uid://b5oih1txnoxfo" path="res://scenes/landscape.tscn" id="1_r6f6m"]
[ext_resource type="PackedScene" uid="uid://clyo1ca2sglx8" path="res://scenes/interface.tscn" id="3_82cvq"]
[ext_resource type="Theme" uid="uid://cmfvdnu5kgo71" path="res://assets/themes/button_theme.tres" id="3_bno0n"]
[ext_resource type="PackedScene" uid="uid://cqkl8l2uevwon" path="res://scenes/hand.tscn" id="4_v11k8"]
[ext_resource type="Texture2D" uid="uid://be6u36aq3sqnv" path="res://icon.svg" id="7_ufmem"]
[ext_resource type="PackedScene" uid="uid://qga2y5wh6ftv" path="res://scenes/drag_component.tscn" id="8_hg626"]
[ext_resource type="PackedScene" uid="uid://df3a2sawj0htj" path="res://scenes/deck.tscn" id="9_6xswo"]
[ext_resource type="Texture2D" uid="uid://v2dwr8jfb1c6" path="res://assets/images/ui/draw_card_border.png" id="10_63nk0"]
[ext_resource type="FontFile" uid="uid://ca0g1l1k6v1sf" path="res://assets/fonts/Pendlefont Heavy.TTF" id="12_kugc0"]
[ext_resource type="Texture2D" uid="uid://b4ol2ch82cnk8" path="res://assets/images/ui/long_border_tile.png" id="13_610m2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sr0rc"]
size = Vector2(262, 262)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qawrv"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 85.0
texture = ExtResource("13_610m2")
texture_margin_left = 753.75
texture_margin_top = 200.25
texture_margin_right = 875.25
texture_margin_bottom = 236.25
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Game" type="Node2D"]
script = ExtResource("1_mh3fo")

[node name="Interface" parent="." instance=ExtResource("3_82cvq")]
layer = -1

[node name="Landscapes" type="Node2D" parent="."]
position = Vector2(995, 621)
metadata/_edit_group_ = true

[node name="Landscape" parent="Landscapes" instance=ExtResource("1_r6f6m")]
position = Vector2(-393, 0)
scale = Vector2(0.5, 0.5)
art_variant = 2
landscape_type = 0

[node name="Landscape2" parent="Landscapes" instance=ExtResource("1_r6f6m")]
position = Vector2(-131, 0)
scale = Vector2(0.5, 0.5)
art_variant = 1
landscape_type = 0

[node name="Landscape3" parent="Landscapes" instance=ExtResource("1_r6f6m")]
position = Vector2(131, 0)
scale = Vector2(0.5, 0.5)
landscape_type = 0

[node name="Landscape4" parent="Landscapes" instance=ExtResource("1_r6f6m")]
position = Vector2(393, 0)
scale = Vector2(0.5, 0.5)
art_variant = 4
landscape_type = 0

[node name="EnemyLandscapes" type="Node2D" parent="."]
position = Vector2(995, 258)
metadata/_edit_group_ = true

[node name="Landscape" parent="EnemyLandscapes" instance=ExtResource("1_r6f6m")]
position = Vector2(-393, -40)
scale = Vector2(0.5, 0.5)
art_variant = 1
landscape_type = 1

[node name="Landscape2" parent="EnemyLandscapes" instance=ExtResource("1_r6f6m")]
position = Vector2(-131, -40)
scale = Vector2(0.5, 0.5)
art_variant = 2
landscape_type = 1

[node name="Landscape3" parent="EnemyLandscapes" instance=ExtResource("1_r6f6m")]
position = Vector2(131, -40)
scale = Vector2(0.5, 0.5)
landscape_type = 1

[node name="Landscape4" parent="EnemyLandscapes" instance=ExtResource("1_r6f6m")]
position = Vector2(393, -40)
scale = Vector2(0.5, 0.5)
art_variant = 4
landscape_type = 1

[node name="Hand" parent="." instance=ExtResource("4_v11k8")]
position = Vector2(995, 960)

[node name="Godot Icon" type="Node2D" parent="."]
position = Vector2(251, 422)
scale = Vector2(0.25, 0.25)
metadata/_edit_group_ = true

[node name="Godot Icon" type="TextureRect" parent="Godot Icon"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(44, 44)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_ufmem")
expand_mode = 1

[node name="drag_component" parent="Godot Icon" instance=ExtResource("8_hg626")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Godot Icon/drag_component"]
shape = SubResource("RectangleShape2D_sr0rc")

[node name="Deck" parent="." instance=ExtResource("9_6xswo")]
position = Vector2(1726, 845)

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Draw Card" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(111, 114)
layout_mode = 1
anchors_preset = -1
anchor_left = 4.15
anchor_top = 18.825
anchor_right = 4.15
anchor_bottom = 18.825
offset_left = -64.0
offset_top = -31.0
offset_right = 68.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("10_63nk0")
flat = true
vertical_icon_alignment = 0
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Reset" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 4.2625
anchor_top = 22.7625
anchor_right = 4.2625
anchor_bottom = 22.7625
offset_left = -68.5
offset_top = -28.5
offset_right = 72.5
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_bno0n")
theme_override_font_sizes/font_size = 26
text = "Reset"
icon_alignment = 1

[node name="Fight" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 1611.0
offset_top = 433.0
offset_right = 2671.0
offset_bottom = 888.0
scale = Vector2(0.15, 0.15)
theme_override_fonts/font = ExtResource("12_kugc0")
theme_override_font_sizes/font_size = 191
theme_override_styles/normal = SubResource("StyleBoxTexture_qawrv")
text = "Fight!"

[connection signal="pressed" from="Buttons/Draw Card" to="." method="_on_draw_card_pressed"]
[connection signal="pressed" from="Buttons/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Buttons/Fight" to="." method="_on_fight_pressed"]
